# LabsCPP

./: .gitignore  CMakeLists.txt  README.md  allStack.txt  codewars.cpp  output.txt
Lab1/: CMakeLists.txt  header.h  libTest.cpp  main.cpp  strlib.cpp  strlib.h
Lab1-2/: CMakeLists.txt  main.cpp  radius.h  strlib.h
Lab3/: CMakeLists.txt  diagramm.puml  header.h  inheritance.h  main.cpp  main.h  testExp.cpp  tst.cpp  variant8.cpp
Lab4/: CMakeLists.txt  Lab4.cpp  main.cpp  main.h  myStack.h
Lab5/: CMakeLists.txt  exp.h
Lab6/: CMakeLists.txt  fileProc.h  lab6.cpp  lab6.h
Lab7/: CMakeLists.txt  lab7.cpp
untitled/: main.cpp
